--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ Makefile.old
 nytprof.out
 MANIFEST.bak
 *.sw[po]
+/Variable-Expand-AnyLevel-*
+/.build
+/_build_params
+/Build
+/Build.bat
+!Build/
+!META.json
+!LICENSE
