add coveralls and travis setting

--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
 name = "Variable-Expand-AnyLevel"
-# badges = ["travis"]
+badges = ["travis", "coveralls"]
 authority="cpan:TSUCCHI"
 
 module_maker="ModuleBuildTiny"
